# Slicer-SurfaceWrapSolidify_old

./: .gitignore  CMakeLists.txt  README.md
Resources/Media/: result_mod_raycast.gif.REMOVED.git-id  result_seg_srs.gif.REMOVED.git-id  result_seg_threshold.gif.REMOVED.git-id  workflow_threshold.gif.REMOVED.git-id
SRSFilter/: CMakeLists.txt  SegmentEditorSRSFilter.py
SRSFilter/SegmentEditorSRSFilterLib/: SegmentEditorEffect.py
SegmentEditorWrapSolidify/: SegmentEditorWrapSolidify.py
SegmentEditorWrapSolidify/SegmentEditorWrapSolidifyLib/: SegmentEditorEffect.py  SegmentEditorEffect.ui
SurfaceWrapSolidify/: CMakeLists.txt  SegmentEditorWrapSolidify.py
